<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Opret ny opskrift"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Indtast navn og tilberedningstid"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRecipeTitle"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Indtast opskriftnavn "
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRecipeTime"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textInputRecipeTitle"
        app:layout_constraintTop_toBottomOf="@+id/textInputRecipeTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_recipe_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Indtast tilberedningstid"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>