...
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Indtast navn på gruppe"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:endIconDrawable="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="@+id/textInputRecipeTitle"
        app:layout_constraintStart_toStartOf="@+id/textInputRecipeTitle"
        app:layout_constraintTop_toBottomOf="@+id/textInputRecipeTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondsearch_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="      Søg efter ingredienser"
            android:inputType="number"
            android:rotationY="0"
...
