...
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
...
