<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innercon"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <EditText
            android:id="@+id/ingsel_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Søg"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/ingsel_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ingsel_amount" />

        <EditText
            android:id="@+id/ingsel_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Antal"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/unit_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingsel_name" />

        <EditText
            android:id="@+id/ingsel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Navn"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inglist_notselected"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:srcCompat="@drawable/line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inglist_selected"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

</LinearLayout>